tests/snapshots/codegen_snapshot_tests__std_registry_subjects.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4754
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[inline(always)]
pub(crate) fn __incan_init_module_statics() {
    static __INCAN_STATIC_INIT_RUNNING: std::sync::atomic::AtomicBool = std::sync::atomic::AtomicBool::new(
        false,
    );
    if __INCAN_STATIC_INIT_RUNNING.load(std::sync::atomic::Ordering::Acquire) {
        return;
    }
    static __INCAN_STATIC_INIT_ONCE: std::sync::OnceLock<()> = std::sync::OnceLock::new();
    __INCAN_STATIC_INIT_ONCE
        .get_or_init(|| {
            struct __IncanStaticInitGuard<'a>(&'a std::sync::atomic::AtomicBool);
            impl Drop for __IncanStaticInitGuard<'_> {
                fn drop(&mut self) {
                    self.0.store(false, std::sync::atomic::Ordering::Release);
                }
            }
            __INCAN_STATIC_INIT_RUNNING
                .store(true, std::sync::atomic::Ordering::Release);
            let _guard = __IncanStaticInitGuard(&__INCAN_STATIC_INIT_RUNNING);
            std::sync::LazyLock::force(&capabilities);
            std::sync::LazyLock::force(&logging_capability);
            std::sync::LazyLock::force(&package_capability);
        });
}
pub use crate::__incan_std::registry::Registry;
pub use crate::__incan_std::registry::RegistryEntry;
pub use crate::__incan_std::registry::RegistrySubject;
pub use crate::__incan_std::registry::SubjectKind;
#[derive(Debug, Clone, Eq, PartialEq)]
struct CapabilityId(pub String);
impl incan_stdlib::reflection::HasTypeClassName for CapabilityId {
    fn __class_name__() -> &'static str {
        "CapabilityId"
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct CapabilitySpec {
    title: String,
}
impl incan_stdlib::reflection::HasClassName for CapabilitySpec {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for CapabilitySpec {
    fn __class_name__() -> &'static str {
        "CapabilitySpec"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for CapabilitySpec {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for CapabilitySpec {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("title"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("title"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for CapabilitySpec {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "title" => Some(format!("{}", self.title)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("title".to_string(), format!("{}", self.title))]
    }
}
pub static capabilities: std::sync::LazyLock<
    incan_stdlib::storage::StaticCell<Registry<CapabilityId, CapabilitySpec>>,
> = std::sync::LazyLock::new(|| incan_stdlib::storage::StaticCell::new(
    Registry::define(
        vec![SubjectKind::CompilationUnit.clone(), SubjectKind::Package.clone()],
    ),
));
pub static logging_capability: std::sync::LazyLock<
    incan_stdlib::storage::StaticCell<RegistryEntry<CapabilityId, CapabilitySpec>>,
> = std::sync::LazyLock::new(|| incan_stdlib::storage::StaticCell::new({
    let __incan_static_arg_0 = CapabilityId("std.logging".to_string());
    let __incan_static_arg_1 = RegistrySubject::_checked_current_unit(
        "std_registry_subjects".to_string(),
    );
    let __incan_static_arg_2 = CapabilitySpec {
        title: "Structured logging".to_string(),
    };
    {
        capabilities
            .with_mut(|__incan_static_value| {
                __incan_static_value
                    .entry(
                        __incan_static_arg_0,
                        __incan_static_arg_1,
                        __incan_static_arg_2,
                    )
            })
    }
}));
pub static package_capability: std::sync::LazyLock<
    incan_stdlib::storage::StaticCell<RegistryEntry<CapabilityId, CapabilitySpec>>,
> = std::sync::LazyLock::new(|| incan_stdlib::storage::StaticCell::new({
    let __incan_static_arg_0 = CapabilityId("std.registry".to_string());
    let __incan_static_arg_1 = RegistrySubject::_checked_package(
        "std_registry_subjects".to_string(),
    );
    let __incan_static_arg_2 = CapabilitySpec {
        title: "Typed declaration registries".to_string(),
    };
    {
        capabilities
            .with_mut(|__incan_static_value| {
                __incan_static_value
                    .entry(
                        __incan_static_arg_0,
                        __incan_static_arg_1,
                        __incan_static_arg_2,
                    )
            })
    }
}));
fn main() {
    __incan_init_module_statics();
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let entries = {
        {
            __incan_init_module_statics();
            capabilities
                .with_mut(|__incan_static_value| {
                    __incan_static_value.loaded_entries()
                })
        }
    };
    let _ = if ::std::convert::identity(entries.len() as i64) != 2 {
        panic!("AssertionError: left != right");
    };
    let _ = if {
        __incan_init_module_statics();
        logging_capability
            .with_ref(|__incan_static_value| {
                (__incan_static_value.subject.kind).clone()
            })
    } != SubjectKind::CompilationUnit
    {
        panic!("AssertionError: left != right");
    };
    let _ = if incan_stdlib::strings::str_ne(
        &{
            __incan_init_module_statics();
            logging_capability
                .with_ref(|__incan_static_value| {
                    (__incan_static_value.subject.qualified_name).clone()
                })
        },
        &"std_registry_subjects",
    ) {
        panic!("AssertionError: left != right");
    };
    let _ = if {
        __incan_init_module_statics();
        package_capability
            .with_ref(|__incan_static_value| {
                (__incan_static_value.subject.kind).clone()
            })
    } != SubjectKind::Package
    {
        panic!("AssertionError: left != right");
    };
    let _ = if incan_stdlib::strings::str_ne(
        &{
            __incan_init_module_statics();
            package_capability
                .with_ref(|__incan_static_value| {
                    (__incan_static_value.subject.qualified_name).clone()
                })
        },
        &"std_registry_subjects",
    ) {
        panic!("AssertionError: left != right");
    };
}
fn main() {
    main();
}
