tests/snapshots/codegen_snapshot_tests__std_traits_convert_usage.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 5381
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::traits::convert::From;
pub use crate::__incan_std::traits::convert::TryFrom;
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct UserId {
    value: i64,
}
impl incan_stdlib::reflection::HasClassName for UserId {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for UserId {
    fn __class_name__() -> &'static str {
        "UserId"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for UserId {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for UserId {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("value"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for UserId {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
impl UserId {
    pub fn from(value: i64) -> Self {
        return UserId { value: value };
    }
}
impl From<i64> for UserId {
    fn from(value: i64) -> Self
    where
        Self: Sized,
    {
        return UserId { value: value };
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct PositiveInt {
    value: i64,
}
impl incan_stdlib::reflection::HasClassName for PositiveInt {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for PositiveInt {
    fn __class_name__() -> &'static str {
        "PositiveInt"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for PositiveInt {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for PositiveInt {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("value"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for PositiveInt {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
impl PositiveInt {
    pub fn try_from(value: i64) -> Result<Self, String> {
        if value <= 0 {
            return Err::<Self, String>(("Value must be positive").to_string());
        }
        return Ok::<Self, String>(PositiveInt { value: value });
    }
}
impl TryFrom<i64> for PositiveInt {
    fn try_from(value: i64) -> Result<Self, String>
    where
        Self: Sized,
    {
        if value <= 0 {
            return Err::<Self, String>(("Value must be positive").to_string());
        }
        return Ok::<Self, String>(PositiveInt { value: value });
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let user = UserId::from(42);
    let result = PositiveInt::try_from(3);
    let _ = println!("{}", user.value.to_string());
    let _ = match result {
        Ok(value) => {
            let _ = println!("{}", value.value.to_string());
        }
        Err(error) => {
            let _ = println!("{}", error);
        }
    };
}
fn main() {
    main();
}
