tests/snapshots/codegen_snapshot_tests__std_uuid_import.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone)]
pub enum __IncanUniond83007a429c21b6f {
    V0(String),
    V1(Vec<u8>),
}
pub use crate::__incan_std::uuid::MAX;
pub use crate::__incan_std::uuid::NAMESPACE_DNS;
pub use crate::__incan_std::uuid::NAMESPACE_URL;
pub use crate::__incan_std::uuid::NIL;
pub use crate::__incan_std::uuid::UUID;
pub use crate::__incan_std::uuid::UuidError;
pub use crate::__incan_std::uuid::UuidVariant;
pub use crate::__incan_std::uuid::UuidVersion;
fn exercise_uuid() -> Result<(), UuidError> {
    let parsed = UUID::parse("550e8400-e29b-41d4-a716-446655440000".to_string())?;
    let same = UUID::from_int(parsed.to_int());
    let raw = parsed.to_bytes()?;
    let roundtrip = UUID::from_bytes(raw)?;
    let _ = if same != parsed {
        panic!("AssertionError: left != right");
    };
    let _ = if roundtrip != parsed {
        panic!("AssertionError: left != right");
    };
    let _ = if NIL != UUID::nil() {
        panic!("AssertionError: left != right");
    };
    let _ = if MAX != UUID::max() {
        panic!("AssertionError: left != right");
    };
    let _ = if parsed.version()? != UuidVersion::V4 {
        panic!("AssertionError: left != right");
    };
    let _ = if parsed.variant()? != UuidVariant::Rfc9562 {
        panic!("AssertionError: left != right");
    };
    let _ = if UUID::from_int(parsed.to_int()) != parsed {
        panic!("AssertionError: left != right");
    };
    let _ = if incan_stdlib::strings::str_ne(
        &NAMESPACE_DNS.canonical()?,
        &"6ba7b810-9dad-11d1-80b4-00c04fd430c8",
    ) {
        panic!("AssertionError: left != right");
    };
    let _ = if incan_stdlib::strings::str_ne(
        &NAMESPACE_URL.canonical()?,
        &"6ba7b811-9dad-11d1-80b4-00c04fd430c8",
    ) {
        panic!("AssertionError: left != right");
    };
    let _ = if UUID::v3(
            NAMESPACE_DNS.clone(),
            __IncanUniond83007a429c21b6f::V0("www.example.com".to_string()),
        )?
        .version()? != UuidVersion::V3
    {
        panic!("AssertionError: left != right");
    };
    let _ = if UUID::v4()?.version()? != UuidVersion::V4 {
        panic!("AssertionError: left != right");
    };
    let _ = if UUID::v5(
            NAMESPACE_DNS,
            __IncanUniond83007a429c21b6f::V0("www.example.com".to_string()),
        )?
        .version()? != UuidVersion::V5
    {
        panic!("AssertionError: left != right");
    };
    let _ = if UUID::v7()?.variant()? != UuidVariant::Rfc9562 {
        panic!("AssertionError: left != right");
    };
    let _ = if UUID::v8(b"abcdefghijklmnop".to_vec())?.version()? != UuidVersion::V8 {
        panic!("AssertionError: left != right");
    };
    return Ok::<(), UuidError>(());
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = match exercise_uuid() {
        Ok(_) => {
            let _ = ();
        }
        Err(err) => println!("{}", err.message()),
    };
}
fn main() {
    main();
}
