tests/snapshots/codegen_snapshot_tests__titlecase_var_not_type.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4331
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::uuid::Uuid;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut TitleCase = Uuid::new_v4();
    let __ = TitleCase.to_string();
}
fn main() {
    main();
}
